--- a/SM/Homework 7/.vscode/tasks.json
+++ b/SM/Homework 7/.vscode/tasks.json
@@ -21,6 +21,29 @@
 			],
 			"group": "build",
 			"detail": "compiler: C:\\Program Files\\LLVM\\bin\\clang.exe"
+		},
+		{
+			"type": "cppbuild",
+			"label": "C/C++: gcc.exe build active file",
+			"command": "C:\\msys64\\ucrt64\\bin\\gcc.exe",
+			"args": [
+				"-fdiagnostics-color=always",
+				"-g",
+				"${file}",
+				"-o",
+				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"detail": "compiler: C:\\msys64\\ucrt64\\bin\\gcc.exe"
 		}
 	]
 }
