--- a/.gitignore
+++ b/.gitignore
@@ -90,20 +90,20 @@ acs-*.bib
 *.exe
 
 #(r)(e)ledmac/(r)(e)ledpar
-*.end
-*.?end
-*.[1-9]
-*.[1-9][0-9]
-*.[1-9][0-9][0-9]
-*.[1-9]R
-*.[1-9][0-9]R
-*.[1-9][0-9][0-9]R
-*.eledsec[1-9]
-*.eledsec[1-9]R
-*.eledsec[1-9][0-9]
-*.eledsec[1-9][0-9]R
-*.eledsec[1-9][0-9][0-9]
-*.eledsec[1-9][0-9][0-9]R
+#*.end
+#*.?end
+#*.[1-9]
+#*.[1-9][0-9]
+#*.[1-9][0-9][0-9]
+#*.[1-9]R
+#*.[1-9][0-9]R
+#*.[1-9][0-9][0-9]R
+#*.eledsec[1-9]
+#*.eledsec[1-9]R
+#*.eledsec[1-9][0-9]
+#*.eledsec[1-9][0-9]R
+#*.eledsec[1-9][0-9][0-9]
+#*.eledsec[1-9][0-9][0-9]R
 
 # glossaries
 *.acn
