--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
+.pdf
+
+## Generated if empty string is given at "Please type another file name for output:"
+.pdf
 
 
 ## Generated if empty string is given at "Please type another file name for output:"
